Fix news section on mobile

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -243,7 +243,7 @@ article {
     align-items: center;
     display: flex;
     height: 360px;
-    width: 360px;
+    margin: auto;
 
     a {
       margin: auto;
